
	* lib/kde3.cygclass: Fix SRC_URI for kdevelop-3.4.1+.

	* lib/berkdb.cygclass: Enable Tcl bindings.
	Rename devel package to libdbX.Y-devel.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am:
	* lib/tcl.cygclass: New cygclass for Tcl modules.

	* lib/ruby-gnome2.cygclass (ruby_gnome2_install): Fix docdir.

	* lib/bzr.cygclass:
	* lib/cvs.cygclass:
	* lib/git.cygclass:
	* lib/svn.cygclass: SRC_DIR hardcoded, as there can be no choice.

	* bin/prep_libtool_modules.sh: Set dependency_libs to empty.

	* lib/xfce4.cygclass: Allow SRC_URI not on xfce.org.

	* bin/doman: Accept more pre-gzipped manpages.

	* lib/gtk2-perl.cygclass: Handle module names not beginning with G.

	* lib/java.cygclass: Unset CLASSPATH to prevent Win32 Java interference.

	* bin/cygport.in (__pkg_diff): Ignore Python .egg-info files.

	* lib/zope.cygclass: Update for Python-2.5 and zope-3.4.

	* lib/wxwidgets.cygclass (_wx_find_config, wx-config): Refactor.
	(WX_CONFIG): Define and export.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am:
	* lib/ocaml.cygclass: New cygclass for OCaml packages.

	* bin/cygport.in (lndirs): Accepts optional args for source and target.
	(cygcmake): New command to wrap cmake with standard args.

	* lib/distutils.cygclass:
	* lib/pygtk.cygclass:
	* lib/python.cygclass: Python 2.5 upgrade.

	* lib/pygtk.cygclass: Honour predefined ORIG_PN.

	* bin/cygport.in (cygconf):
	Create symlinks for files removed to be regenerated by configure.
	(__pkg_diff): Ignore SlackBuild and .png files.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am:
	* lib/xfce4.cygclass: New cygclass for Xfce 4.4.

	* lib/qt3.cygclass: Add QBINDIR to PATH.

	* bin/cygport.in: Accept RESTRICT.
	(__prepstrip): Skip if RESTRICT=strip.

	* CYGWIN-PATCHES/README:
	* bin/cygport.in (__src_fetch):
	* lib/Makefile.am:
	* lib/bzr.cygclass: New cygclass for Bazaar-VCS checkout packages.

	* lib/apache.cygclass (doapachemod): New command.
	* lib/gtkmm.cygclass: Ignore MSVC_Net2003 during diff.