@@ -1,4 +1,6 @@
 
+	* bin/cygport.in (cygautoreconf): Assure autotool files are writable.
+
 	* lib/kde3.cygclass: Fix SRC_URI for kdevelop-3.4.1+.
 
 	* lib/berkdb.cygclass: Enable Tcl bindings.
